# polylabel-pyo3

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: bench.yml  build.yml  test.yml
benchmarks/: conftest.py  requirements.txt  test_bench_polylabel_ext.py  test_bench_polylabel_ext_np.py
examples/: polylabel_gui.py
python/polylabel_pyo3/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_api.py  test_module.py  test_polylabel_ext.py  test_polylabel_ext_np.py
tests/fixtures/: __init__.py  polys.py
