[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "polylabel-pyo3"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]